<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/login_activity_bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/login_activity_bLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_activity_bRevoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revoke_access"
        android:visibility="gone" />

    <TextView
        android:id="@+id/login_activity_tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_login"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>